--- a/src/headers/Header.css
+++ b/src/headers/Header.css
@@ -25,11 +25,12 @@
     font-size: 4vh;
 }
 .shelfname{
-    
     width:200px;
-    height:100%;
+    height:100%; 
     text-align: center;
+    padding-left:40px;
     background-color: #D34735;
+    display:flex;
 }
 .binname{
     width:200px;
